<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.discordlogger</groupId>
    <artifactId>discordlogger</artifactId>
    <version>2.3.1</version>
    <name>DiscordLogger</name>
    <description>Logs server events to a Discord channel via webhooks.</description>
    <url>https://github.com/GodTierGamers/DiscordLogger</url>

    <properties>
        <!-- Java 17, not 25. Bytecode is a hard gate: a Java 17 runtime physically
             cannot load a class file compiled for 25, so targeting 25 restricted the
             plugin to servers on 1.20.5+. Nothing in this codebase needs anything
             newer than 17 — see UpdateChecker for the single exception, which was
             a library API rather than a language feature. -->
        <maven.compiler.release>8</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Compile against the OLDEST supported API, never the newest. Building
             against a newer one and declaring an older api-version is how you ship a
             plugin that loads and then dies on NoSuchMethodError: the compiler
             happily links methods the old server does not have. 1.19.4 is the floor
             because it is the oldest release where the full test suite runs — 1.18.x
             and 1.19.0 to 1.19.2 ship a Bukkit whose YamlConfiguration needs SnakeYAML
             1.x, which collides with ours on the (unrelocated) test classpath.
             That collision is a test artifact only, since SnakeYAML is shaded and
             relocated in the JAR, but support we cannot run the suite against is
             support we cannot honestly claim. -->
        <paper.api.version>1.19.4-R0.1-SNAPSHOT</paper.api.version>

        <!-- The oldest API the plugin promises to compile against, checked by CI's
             compat-floor job. It is LOWER than paper.api.version above, and the gap
             is deliberate: api-version cannot express a patch before 1.20.5, so
             declaring 1.19 admits 1.19.0 onward, while the test suite only runs from
             1.19.4 (Bukkit switched to SnakeYAML 2.x there, and older ones collide
             with ours on the unrelocated test classpath). Compiling against this
             floor is what makes advertising the whole 1.19 line honest rather than
             hopeful — it fails the build the moment anyone uses an API newer than
             the oldest server that can load the plugin. -->
        <dl.compat.floor>1.19-R0.1-SNAPSHOT</dl.compat.floor>

        <!-- SINGLE SOURCE OF TRUTH for the versions humans would otherwise retype.
             Everything downstream derives from these: plugin.yml via Maven
             filtering, the CI workflows by reading this file, and the website +
             README via scripts/sync-versions.py. Change them here, nowhere else. -->
        <dl.api.version>1.19</dl.api.version>

        <!-- Minecraft versions advertised on the Modrinth and Hangar listings when a
             stable release is published. This is the one value that cannot be derived
             from anything else in the build: api-version sets the *minimum* a server
             must implement, but which concrete Minecraft releases to list is an
             editorial call. Keep it in step with dl.api.version. Every entry is
             checked against Modrinth's known-version list before publishing, so a
             typo or an invented version fails the release rather than mislabelling it. -->
        <dl.game.versions>1.19,1.19.1,1.19.2,1.19.3,1.19.4,1.20,1.20.1,1.20.2,1.20.3,1.20.4,1.20.5,1.20.6,1.21,1.21.1,1.21.2,1.21.3,1.21.4,1.21.5,1.21.6,1.21.7,1.21.8,1.21.9,1.21.10,1.21.11,26.1,26.1.1,26.1.2,26.2</dl.game.versions>

        <!-- Build channel/date are stamped by CI (-Ddl.build.channel=stable|nightly,
             -Ddl.build.date=DD-MM-YYYY). A plain local `mvn package` gets "dev",
             so a hand-built JAR is never mistaken for a release artifact. -->
        <dl.build.channel>dev</dl.build.channel>
        <dl.build.date>unknown</dl.build.date>

        <junit.version>6.1.3</junit.version>
        <surefire.version>3.5.6</surefire.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- Tests. ConfigMigrator is the reason this exists: it decides whether a
             user's settings survive an upgrade, and a silent break there is the
             worst failure this plugin has. CI runs `mvn clean package` with tests
             on, so these gate every PR. -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Paper API provided by the server at runtime; paper-api is required
             for Paper-specific events such as AsyncChatEvent. -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>${paper.api.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Anonymous usage metrics (bstats.org). Shaded + relocated below:
             bStats REQUIRES relocation so copies bundled by different plugins
             don't collide at runtime. -->
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit</artifactId>
            <version>3.2.1</version>
            <scope>compile</scope>
        </dependency>

        <!-- YAML parsing for config migration (parsing-only) -->
        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>2.6</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <!-- include all resources unfiltered (config.yml, etc.), EXCEPT plugin.yml
                 and build-info.properties -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>plugin.yml</exclude>
                    <exclude>build-info.properties</exclude>
                </excludes>
            </resource>

            <!-- include ONLY plugin.yml + build-info.properties with filtering,
                 so ${project.version} / ${dl.build.channel} / ${dl.build.date} work -->
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                    <include>build-info.properties</include>
                </includes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>org.yaml.snakeyaml</pattern>
                                    <shadedPattern>com.discordlogger.shaded.snakeyaml</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.bstats</pattern>
                                    <shadedPattern>com.discordlogger.shaded.bstats</shadedPattern>
                                </relocation>
                            </relocations>
                            <!-- Disable to avoid ASM parsing issues with modern bytecode -->
                            <minimizeJar>false</minimizeJar>
                            <!-- dependency-reduced-pom.xml only matters when publishing to a
                                 Maven repo (so consumers don't inherit shaded deps). This
                                 plugin ships as a JAR on GitHub Releases and is never consumed
                                 as a Maven artifact, so don't generate it at all. -->
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <!-- Exclude snakeyaml's META-INF to avoid MANIFEST.MF overlap warning.
                                     We only need the snakeyaml classes, not its manifest. -->
                                <filter>
                                    <artifact>org.yaml:snakeyaml</artifact>
                                    <excludes>
                                        <exclude>META-INF/**</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${surefire.version}</version>
            </plugin>

            <!-- maven.compiler.release in <properties> drives the compiler; no
                 override here. Targeting 25 to match Minecraft 26.x, which requires
                 a Java 25 runtime — so the emitted bytecode can't load on older
                 Java. See ARCHITECTURE.md for what that means for compatibility. -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>
        </plugins>
    </build>
</project>